# Advent-of-Code-Lets-Learn

./: .gitignore  README.md  main.py  pyproject.toml
src/aoc/: runner.py
src/aoc2025/solutions/day01/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/day02/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/day03/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/day04/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/day05/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/day06/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py
src/aoc2025/solutions/day07/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/day08/: basic.py  compare_solutions.py  elegant.py  initial.py  optimized.py  utils.py
src/aoc2025/solutions/templates/: optimized.py  solution.py
