[project]
name = "advent-of-code-lets-learn"
version = "0.1.0"
description = "A Let's Learn series exploring Advent of Code by solving, analyzing, and teaching each day's puzzles."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest",
    "rich",
    "ruff",
    "pyrefly",
]

